<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <Button
        android:id="@+id/sdi_preventsecondarysignaturepack_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="@string/sds_btn_preventsecondarysignaturepack"
        android:onClick="toPreventSecondarySignaturePack"/>

    <Button
        android:id="@+id/sdi_preventdecompile_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/sdi_preventsecondarysignaturepack_btn"
        android:text="@string/sds_btn_preventdecompile"
        android:onClick="toPreventDecompile"/>

    <Button
        android:id="@+id/sdi_codeseniorconfusion_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_preventdecompile_btn"
        android:layout_alignParentStart="true"
        android:text="@string/sds_btn_codeseniorconfusion"
        android:onClick="toCodeSeniorConfusion"/>

    <Button
        android:id="@+id/sdi_runtimeverification_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sds_btn_runtimeverification"
        android:layout_below="@id/sdi_codeseniorconfusion_btn"
        android:layout_alignParentStart="true"
        android:onClick="toRuntimeVerfication"/>

    <Button
        android:id="@+id/sdi_preventmemorychange_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sds_btn_preventmemorychange"
        android:layout_below="@id/sdi_runtimeverification_btn"
        android:layout_alignParentStart="true"
        android:onClick="toPreventMemoryChange"/>
</RelativeLayout>
