<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/sdi_pseudoencryption_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="@string/sds_btn_pseudoencryption"
        android:onClick="toPseudoEncryption"/>

    <Button
        android:id="@+id/sdi_destoryapkpackage_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_pseudoencryption_btn"
        android:layout_alignParentStart="true"
        android:text="@string/sds_btn_destoryapkpackage"
        android:onClick="toDestoryAPKPackage"/>

    <Button
        android:id="@+id/sdi_resourceimagevandalism"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdi_destoryapkpackage_btn"
        android:layout_alignParentStart="true"
        android:text="@string/sds_btn_resourceimagevandalism"
        android:onClick="toResourceImageVandalism"/>
</RelativeLayout>
